force-app/main/default/objects/Due_Diligence__c/Due_Diligence__c.object-meta.xml
<CustomObject>
    <description>This object contains due diligence details of primary buyer and JO</description>
    <label>Due Diligence</label>
    <nameField>
        <displayFormat>DD - {0000}</displayFormat>
        <label>Due Diligence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Due Diligences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>