force-app/main/default/objects/Due_Diligence__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Due Diligences</relationshipLabel>
    <relationshipName>Due_Diligences</relationshipName>
    <type>Lookup</type>
</CustomField>