force-app/main/default/objects/Due_Diligence__c/fields/Address_of_Employer__c.field-meta.xml
<CustomField>
    <fullName>Address_of_Employer__c</fullName>
    <label>Address of Employer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>