force-app/main/default/objects/Due_Diligence__c/fields/Country_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation__c</fullName>
    <label>Country of Incorporation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy 1</fullName>
            </value>
            <value>
                <fullName>Dummy 2</fullName>
            </value>
            <value>
                <fullName>Dummy 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>