force-app/main/default/objects/Due_Diligence__c/fields/Details_on_Funds_of_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Details_on_Funds_of_Transaction__c</fullName>
    <label>Details on Funds of Transaction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>