force-app/main/default/objects/Due_Diligence__c/fields/Details_on_Sanctions__c.field-meta.xml
<CustomField>
    <fullName>Details_on_Sanctions__c</fullName>
    <label>Details on Sanctions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>