force-app/main/default/objects/Due_Diligence__c/fields/Intended_use_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Intended_use_of_Property__c</fullName>
    <label>Intended use of Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Residential,Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>