force-app/main/default/objects/Due_Diligence__c/fields/IsPrimaryAccount__c.field-meta.xml
<CustomField>
    <fullName>IsPrimaryAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify that it is primary Account</description>
    <label>IsPrimaryAccount</label>
    <type>Checkbox</type>
</CustomField>