force-app/main/default/objects/Due_Diligence__c/fields/Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form__c</fullName>
    <label>Legal Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy 1</fullName>
            </value>
            <value>
                <fullName>Dummy 2</fullName>
            </value>
            <value>
                <fullName>Dummy 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>