force-app/main/default/objects/Due_Diligence__c/fields/Name_of_Employer__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Employer__c</fullName>
    <label>Name of Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>