force-app/main/default/objects/Due_Diligence__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Due Diligences</relationshipLabel>
    <relationshipName>Due_Diligences</relationshipName>
    <type>Lookup</type>
</CustomField>