force-app/main/default/objects/Due_Diligence__c/fields/Owner_Politically_Exposed__c.field-meta.xml
<CustomField>
    <fullName>Owner_Politically_Exposed__c</fullName>
    <formula>IF( You_ultimate_owners_Politically_Exposed__c == true, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Politically Exposed?</label>
    <type>Text</type>
</CustomField>