force-app/main/default/objects/Due_Diligence__c/fields/Owners_subject_to_sanctions__c.field-meta.xml
<CustomField>
    <fullName>Owners_subject_to_sanctions__c</fullName>
    <formula>IF(You_ultimate_owners_subject_to_sanctions__c == true, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owners subject to sanctions?</label>
    <type>Text</type>
</CustomField>