force-app/main/default/objects/Due_Diligence__c/fields/RC_KYC_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>RC_KYC_Submitted_Date__c</fullName>
    <label>RC KYC Submitted Date</label>
    <type>Date</type>
</CustomField>