force-app/main/default/objects/Due_Diligence__c/fields/Self_Employed__c.field-meta.xml
<CustomField>
    <fullName>Self_Employed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Self-Employed</label>
    <type>Checkbox</type>
</CustomField>