force-app/main/default/objects/Due_Diligence__c/fields/Source_of_funds__c.field-meta.xml
<CustomField>
    <fullName>Source_of_funds__c</fullName>
    <label>Source of funds</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>