force-app/main/default/objects/Due_Diligence__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <formula>&apos;Purchase&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Type</label>
    <type>Text</type>
</CustomField>