force-app/main/default/objects/Due_Diligence__c/fields/UniqueExternalKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueExternalKey__c</fullName>
    <externalId>true</externalId>
    <label>UniqueExternalKey</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>