force-app/main/default/objects/Due_Diligence__c/fields/You_ultimate_owners_Politically_Exposed__c.field-meta.xml
<CustomField>
    <fullName>You_ultimate_owners_Politically_Exposed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>You/ultimate owners Politically Exposed?</label>
    <type>Checkbox</type>
</CustomField>