force-app/main/default/objects/Due_Diligence__c/fields/You_ultimate_owners_subject_to_sanctions__c.field-meta.xml
<CustomField>
    <fullName>You_ultimate_owners_subject_to_sanctions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>You/ultimate owners subject to sanctions</label>
    <type>Checkbox</type>
</CustomField>